engr441/while-infer/tests/valid/ArrayEmpty_Valid_1.while
int[] f(int[] xs) {
    return xs;
}

void main() {
    assert [1,4] == f([1,4]);
    assert [] == f([]);
}
