engr441/while-infer/tests/invalid-typing/Typing_Invalid_13.while
int f() {
    int x = false;
    return x;
}